--- a/output/vvv/humor_2.html
+++ b/output/vvv/humor_2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>유머 게시판 - 페이지 1</title>
+    <title>유머 게시판 - 페이지 2</title>
     <style>
         /* 기본 스타일 */
         body {
@@ -178,56 +178,56 @@
         <h1>유머 게시판</h1>
         <ul style="list-style: none; padding: 0;">
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./상상초월-남편이-결혼-전-연애하던-시절-소개팅한-걸-알게된-아내-이야기.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">남편이 결혼 전 연애하던 시절 소개팅한 걸 알게된 아내</h2>
+            <a href="./경악-쏟아지는-악플에-암투병사실-공개한-박성광-아내-이솔아-노하우.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">쏟아지는 악플에 암투병사실 공개한 박성광 아내 이솔아</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./최강-호감인지-착각인지-알려줘jpg-궁금증.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">호감인지 착각인지 알려줘.jpg</h2>
+            <a href="./경악-제미나이-25를-써보고-충격받은-웹소설-작가-노하우.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">제미나이 2.5를 써보고 충격받은 웹소설 작가</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./결국-분양-보냈더니-8km-거리를-돌아온-강아지-사실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">분양 보냈더니 8km 거리를 돌아온 강아지</h2>
+            <a href="./궁금-임금체불한-중소기업-대표의-태도-대참사-핵심.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">임금체불한 중소기업 대표의 태도 대참사</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./현실-아내에게-핸드폰-공기계-빌려줬다가-뭔가를-들켜버린-남편-대참사-진실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">아내에게 핸드폰 공기계 빌려줬다가 ‘뭔가’를 들켜버린 남편 대참사</h2>
+            <a href="./공감-와이프가-남직원이랑-바람이나서-폐업한-족발집-대반전.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">와이프가 남직원이랑 바람이나서 폐업한 족발집</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./강추-배민-리뷰-1점-받은-사장의-대처-모음집.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">배민 리뷰 1점 받은 사장의 대처</h2>
+            <a href="./충격반전-아빠랑-비교돼서-남친과-헤어진-판녀-비하인드.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">아빠랑 비교돼서 남친과 헤어진 판녀</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완전-도로-한복판에서-사진-찍는-청사포-민폐-커플-레전드-레전드.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">도로 한복판에서 사진 찍는 청사포 민폐 커플 레전드</h2>
+            <a href="./대박-산불-음모론-퍼트리다-주한미군에게-한소리-들은-애국보수-리뷰.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">산불 음모론 퍼트리다 주한미군에게 한소리 들은 애국보수</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./극한-엑소-카이가-공익-2년하고-느낀점-궁금증.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">엑소 카이가 공익 2년하고 느낀점</h2>
+            <a href="./초강력-인생-최대-업적인-조혈모세포-기증을-달성한-웃대인-정보.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">인생 최대 업적인 조혈모세포 기증을 달성한 웃대인</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완전-3년동안-남친에게-정규직이라-거짓말한-블라인드녀-후기.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">3년동안 남친에게 정규직이라 거짓말한 블라인드녀</h2>
+            <a href="./전설의-오버워치-핵쟁이가-4시간만-쓰고-핵을-버린-이유-정보.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">오버워치 핵쟁이가 4시간만 쓰고 핵을 버린 이유</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완전-160cm-키작남이-말하는-현실-진실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">160cm 키작남이 말하는 현실</h2>
+            <a href="./화제-아버지-돌아가시고-집에서-쫓겨나게된-욜로녀-대참사-모먼트.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">아버지 돌아가시고 집에서 쫓겨나게된 욜로녀 대참사</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./절대-비트코인으로-결혼-자금을-날린-남편과의-결혼을-고민하는-여자-기적.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">비트코인으로 결혼 자금을 날린 남편과의 결혼을 고민하는 여자</h2>
+            <a href="./신기한-장르소설갤-난리나게한-어느-웹소설-작가가-연재를-중단한-이유-기록.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">장르소설갤 난리나게한 어느 웹소설 작가가 연재를 중단한 이유</h2>
             </a>
         </li></ul>
-        <div class="pagination" style="margin-top: 20px; text-align: center;"><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">1</span></div>
+        <div class="pagination" style="margin-top: 20px; text-align: center;"><a href="./humor_1.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">◀</a><a href="./humor_1.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">1</a><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">2</span></div>
     </div>
     
     <!-- 하단 네비게이션 바 추가 -->
@@ -250,7 +250,8 @@
                 margin: 0 auto;
                 padding: 0 20px;
             ">
-                <span style="color: #333; padding: 8px 15px;">페이지 1</span>
+                <a href="./humor_1.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; transition: background-color 0.3s;">◀ 이전</a>
+<span style="color: #333; padding: 8px 15px;">페이지 2</span>
             </div>
         </div>
     </nav>
