--- a/output/vvv/humor_3.html
+++ b/output/vvv/humor_3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>유머 게시판 - 페이지 1</title>
+    <title>유머 게시판 - 페이지 3</title>
     <style>
         /* 기본 스타일 */
         body {
@@ -178,56 +178,56 @@
         <h1>유머 게시판</h1>
         <ul style="list-style: none; padding: 0;">
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./상상초월-남편이-결혼-전-연애하던-시절-소개팅한-걸-알게된-아내-이야기.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">남편이 결혼 전 연애하던 시절 소개팅한 걸 알게된 아내</h2>
+            <a href="./절대-사육장-잠근-채-산불-대피하는-바람에-개-700마리를-죽게한-개농장-주인의-무시무시한-한마디-순간.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">사육장 잠근 채 산불 대피하는 바람에 개 700마리를 죽게한 개농장 주인의 무시무시한 한마디</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./최강-호감인지-착각인지-알려줘jpg-궁금증.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">호감인지 착각인지 알려줘.jpg</h2>
+            <a href="./경악-PC로-망해놓고-관객-탓하는-디즈니에-대한-한국인의-일침-대반전.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">PC로 망해놓고 관객 탓하는 디즈니에 대한 한국인의 일침</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./결국-분양-보냈더니-8km-거리를-돌아온-강아지-사실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">분양 보냈더니 8km 거리를 돌아온 강아지</h2>
+            <a href="./역대급-맨손으로-미국에서-컵밥집하다가-인도네시아-200개-지점-낸-비결-정리.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">맨손으로 미국에서 컵밥집하다가 인도네시아 200개 지점 낸 비결</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./현실-아내에게-핸드폰-공기계-빌려줬다가-뭔가를-들켜버린-남편-대참사-진실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">아내에게 핸드폰 공기계 빌려줬다가 ‘뭔가’를 들켜버린 남편 대참사</h2>
+            <a href="./전설의-챗GPT로-실사화가-된-유명-짤들-비밀.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">챗GPT로 실사화가 된 유명 짤들</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./강추-배민-리뷰-1점-받은-사장의-대처-모음집.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">배민 리뷰 1점 받은 사장의 대처</h2>
+            <a href="./필독-산불이-날-수-있는-보조배터리가-산에서-다량으로-발견된-이유-feat-캣맘-비결.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">산불이 날 수 있는 보조배터리가 산에서 다량으로 발견된 이유 (feat. 캣맘)</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완전-도로-한복판에서-사진-찍는-청사포-민폐-커플-레전드-레전드.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">도로 한복판에서 사진 찍는 청사포 민폐 커플 레전드</h2>
+            <a href="./대유행-챗GPT로-만평-만들다가-생긴-대참사-꿀팁.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">챗GPT로 만평 만들다가 생긴 대참사</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./극한-엑소-카이가-공익-2년하고-느낀점-궁금증.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">엑소 카이가 공익 2년하고 느낀점</h2>
+            <a href="./최강-손찌검하는-아내를-간단한-방법으로-치료한-남편-핵심.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">손찌검하는 아내를 간단한 방법으로 치료한 남편</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완전-3년동안-남친에게-정규직이라-거짓말한-블라인드녀-후기.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">3년동안 남친에게 정규직이라 거짓말한 블라인드녀</h2>
+            <a href="./상상초월-손흥민-산불에-기부-안-했다고-욕하던-여초-근황-모음.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">손흥민 산불에 기부 안 했다고 욕하던 여초 근황</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완전-160cm-키작남이-말하는-현실-진실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">160cm 키작남이 말하는 현실</h2>
+            <a href="./충격반전-김수현에게-일침-놓는-143만-유튜버-기적.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">김수현에게 일침 놓는 143만 유튜버</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./절대-비트코인으로-결혼-자금을-날린-남편과의-결혼을-고민하는-여자-기적.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">비트코인으로 결혼 자금을 날린 남편과의 결혼을 고민하는 여자</h2>
+            <a href="./논란-오늘자-사설토토-역배-먹튀-노하우.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">오늘자 사설토토 역배 먹튀</h2>
             </a>
         </li></ul>
-        <div class="pagination" style="margin-top: 20px; text-align: center;"><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">1</span></div>
+        <div class="pagination" style="margin-top: 20px; text-align: center;"><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">◀</a><a href="./humor_1.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">1</a><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">2</a><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">3</span></div>
     </div>
     
     <!-- 하단 네비게이션 바 추가 -->
@@ -250,7 +250,8 @@
                 margin: 0 auto;
                 padding: 0 20px;
             ">
-                <span style="color: #333; padding: 8px 15px;">페이지 1</span>
+                <a href="./humor_2.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; transition: background-color 0.3s;">◀ 이전</a>
+<span style="color: #333; padding: 8px 15px;">페이지 3</span>
             </div>
         </div>
     </nav>
