--- a/output/vvv/humor_4.html
+++ b/output/vvv/humor_4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>유머 게시판 - 페이지 1</title>
+    <title>유머 게시판 - 페이지 4</title>
     <style>
         /* 기본 스타일 */
         body {
@@ -178,56 +178,56 @@
         <h1>유머 게시판</h1>
         <ul style="list-style: none; padding: 0;">
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./상상초월-남편이-결혼-전-연애하던-시절-소개팅한-걸-알게된-아내-이야기.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">남편이 결혼 전 연애하던 시절 소개팅한 걸 알게된 아내</h2>
+            <a href="./초강력-김희철이-2019년-산불에-기부한-걸-티낼-수-밖에-없었던-이유-모음.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">김희철이 2019년 산불에 기부한 걸 티낼 수 밖에 없었던 이유</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./최강-호감인지-착각인지-알려줘jpg-궁금증.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">호감인지 착각인지 알려줘.jpg</h2>
+            <a href="./논란-뇌수술로-시각장애가-생긴-스트리머가-마스터를-찍은-비법-분석.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">뇌수술로 시각장애가 생긴 스트리머가 마스터를 찍은 비법</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./결국-분양-보냈더니-8km-거리를-돌아온-강아지-사실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">분양 보냈더니 8km 거리를 돌아온 강아지</h2>
+            <a href="./궁금-한-아이돌지망생이-오디션만-보면-떨어졌던-이유-사실.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">한 아이돌지망생이 오디션만 보면 떨어졌던 이유</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./현실-아내에게-핸드폰-공기계-빌려줬다가-뭔가를-들켜버린-남편-대참사-진실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">아내에게 핸드폰 공기계 빌려줬다가 ‘뭔가’를 들켜버린 남편 대참사</h2>
+            <a href="./화제-청춘을-보상-받기-위해-신붓감-찾아-일본-간다는-40대-노총각-결말-요약.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">청춘을 보상 받기 위해 신붓감 찾아 일본 간다는 40대 노총각 결말</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./강추-배민-리뷰-1점-받은-사장의-대처-모음집.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">배민 리뷰 1점 받은 사장의 대처</h2>
+            <a href="./현실-남편-비상금-100만원-발견한-블라인드녀-레전드.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">남편 비상금 100만원 발견한 블라인드녀</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완전-도로-한복판에서-사진-찍는-청사포-민폐-커플-레전드-레전드.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">도로 한복판에서 사진 찍는 청사포 민폐 커플 레전드</h2>
+            <a href="./역대급-한국-케이팝-문화에-문제가-있다는-뉴진스-총정리.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">한국 케이팝 문화에 문제가 있다는 뉴진스</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./극한-엑소-카이가-공익-2년하고-느낀점-궁금증.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">엑소 카이가 공익 2년하고 느낀점</h2>
+            <a href="./공감-담배-피우던-고딩-셋이-평범한-딸바보-아저씨를-건들면-벌어지는-일-모음집.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">담배 피우던 고딩 셋이 평범한 딸바보 아저씨를 건들면 벌어지는 일</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완전-3년동안-남친에게-정규직이라-거짓말한-블라인드녀-후기.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">3년동안 남친에게 정규직이라 거짓말한 블라인드녀</h2>
+            <a href="./절대-여고생-여동생이-친오빠에게-카톡하는-이유-해설.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">여고생 여동생이 친오빠에게 카톡하는 이유</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./완전-160cm-키작남이-말하는-현실-진실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">160cm 키작남이 말하는 현실</h2>
+            <a href="./대박-커플팰리스에-나온-월-300만원-남자와-결혼하려는-여자-TMI.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">커플팰리스에 나온 월 300만원 남자와 결혼하려는 여자</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./절대-비트코인으로-결혼-자금을-날린-남편과의-결혼을-고민하는-여자-기적.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">비트코인으로 결혼 자금을 날린 남편과의 결혼을 고민하는 여자</h2>
+            <a href="./절대-국민연금-추천하던-연금박사가-평가하는-이번-국민연금-개혁-반전.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">국민연금 추천하던 연금박사가 평가하는 이번 국민연금 개혁</h2>
             </a>
         </li></ul>
-        <div class="pagination" style="margin-top: 20px; text-align: center;"><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">1</span></div>
+        <div class="pagination" style="margin-top: 20px; text-align: center;"><a href="./humor_3.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">◀</a><a href="./humor_1.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">1</a><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">2</a><a href="./humor_3.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">3</a><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">4</span></div>
     </div>
     
     <!-- 하단 네비게이션 바 추가 -->
@@ -250,7 +250,8 @@
                 margin: 0 auto;
                 padding: 0 20px;
             ">
-                <span style="color: #333; padding: 8px 15px;">페이지 1</span>
+                <a href="./humor_3.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; transition: background-color 0.3s;">◀ 이전</a>
+<span style="color: #333; padding: 8px 15px;">페이지 4</span>
             </div>
         </div>
     </nav>
