--- a/output/vvv/humor_1.html
+++ b/output/vvv/humor_1.html
@@ -29,56 +29,56 @@
         <h1>유머 게시판</h1>
         <ul style="list-style: none; padding: 0;">
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./역대급-분양-보냈더니-8km-거리를-돌아온-강아지-비하인드.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">분양 보냈더니 8km 거리를 돌아온 강아지</h2>
+            <a href="./역대급-남편이-결혼-전-연애하던-시절-소개팅한-걸-알게된-아내-모음.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">남편이 결혼 전 연애하던 시절 소개팅한 걸 알게된 아내</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./실화-와이프가-남직원이랑-바람이나서-폐업한-족발집-근황.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">와이프가 남직원이랑 바람이나서 폐업한 족발집</h2>
+            <a href="./충격반전-호감인지-착각인지-알려줘.jpg-꿀잼.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">호감인지 착각인지 알려줘.jpg</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./대유행-산불-음모론-퍼트리다-주한미군에게-한소리-들은-애국보수-기록.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">산불 음모론 퍼트리다 주한미군에게 한소리 들은 애국보수</h2>
+            <a href="./충격적인-아내에게-핸드폰-공기계-빌려줬다가-뭔가를-들켜버린-남편-대참사-리뷰.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">아내에게 핸드폰 공기계 빌려줬다가 ‘뭔가’를 들켜버린 남편 대참사</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./필수-산불이-날-수-있는-보조배터리가-산에서-다량으로-발견된-이유-feat.-캣맘-정보.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">산불이 날 수 있는 보조배터리가 산에서 다량으로 발견된 이유 (feat. 캣맘)</h2>
+            <a href="./절대-배민-리뷰-1점-받은-사장의-대처-후기.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">배민 리뷰 1점 받은 사장의 대처</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./초특급-오늘자-사설토토-역배-먹튀-레시피.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">오늘자 사설토토 역배 먹튀</h2>
+            <a href="./최초-엑소-카이가-공익-2년하고-느낀점-리뷰.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">엑소 카이가 공익 2년하고 느낀점</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./대박-청춘을-보상-받기-위해-신붓감-찾아-일본-간다는-40대-노총각-결말-기록.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">청춘을 보상 받기 위해 신붓감 찾아 일본 간다는 40대 노총각 결말</h2>
+            <a href="./완벽-임금체불한-중소기업-대표의-태도-대참사-꿀팁.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">임금체불한 중소기업 대표의 태도 대참사</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./결국-국민연금-추천하던-연금박사가-평가하는-이번-국민연금-개혁-핵심.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">국민연금 추천하던 연금박사가 평가하는 이번 국민연금 개혁</h2>
+            <a href="./단독-오버워치-핵쟁이가-4시간만-쓰고-핵을-버린-이유-근황.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">오버워치 핵쟁이가 4시간만 쓰고 핵을 버린 이유</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./경악-뉴진스-민지를-정말-사랑했던-한-버니즈의-글-대참사-후기.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">뉴진스 민지를 정말 사랑했던 한 버니즈의 글 대참사</h2>
+            <a href="./현실-사육장-잠근-채-산불-대피하는-바람에-개-700마리를-죽게한-개농장-주인의-무시무시한-한마디-근황.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">사육장 잠근 채 산불 대피하는 바람에 개 700마리를 죽게한 개농장 주인의 무시무시한 한마디</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./전격-박명수가-마이바흐를-팔고-테슬라를-타는-이유-TMI.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">박명수가 마이바흐를 팔고 테슬라를 타는 이유</h2>
+            <a href="./강추-PC로-망해놓고-관객-탓하는-디즈니에-대한-한국인의-일침-핵심.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">PC로 망해놓고 관객 탓하는 디즈니에 대한 한국인의 일침</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./최강-주문-취소했더니-야구방망이-들고-매장으로-찾아온-손님-진실.html" style="text-decoration: none; color: #333; display: block;">
-                <h2 style="margin: 0; font-size: 18px;">주문 취소했더니 야구방망이 들고 매장으로 찾아온 손님</h2>
+            <a href="./충격적-뇌수술로-시각장애가-생긴-스트리머가-마스터를-찍은-비법-꿀팁.html" style="text-decoration: none; color: #333; display: block;">
+                <h2 style="margin: 0; font-size: 18px;">뇌수술로 시각장애가 생긴 스트리머가 마스터를 찍은 비법</h2>
             </a>
         </li></ul>
-        <div class="pagination" style="margin-top: 20px; text-align: center;"><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">1</span><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">2</a><a href="./humor_2.html" style="margin: 0 5px; padding: 5px 10px; text-decoration: none; color: #333;">▶</a></div>
+        <div class="pagination" style="margin-top: 20px; text-align: center;"><span style="margin: 0 5px; padding: 5px 10px; background-color: #f0f0f0; border-radius: 3px;">1</span></div>
     </div>
     
     <!-- 하단 네비게이션 바 추가 -->
@@ -102,7 +102,6 @@
                 padding: 0 20px;
             ">
                 <span style="color: #333; padding: 8px 15px;">페이지 1</span>
-<a href="./humor_2.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; transition: background-color 0.3s;">다음 ▶</a>
             </div>
         </div>
     </nav>
