--- a/vvv/humor_1.html
+++ b/vvv/humor_1.html
@@ -178,52 +178,52 @@
         <h1>유머 게시판</h1>
         <ul style="list-style: none; padding: 0;">
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./실화-남편이-결혼-전-연애하던-시절-소개팅한-걸-알게된-아내-레시피.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./필독-남편이-결혼-전-연애하던-시절-소개팅한-걸-알게된-아내-요약.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">남편이 결혼 전 연애하던 시절 소개팅한 걸 알게된 아내</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./논란-호감인지-착각인지-알려줘jpg-정보.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./완벽-호감인지-착각인지-알려줘jpg-분석.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">호감인지 착각인지 알려줘.jpg</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./경악-분양-보냈더니-8km-거리를-돌아온-강아지-이야기.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./완벽-분양-보냈더니-8km-거리를-돌아온-강아지-이야기.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">분양 보냈더니 8km 거리를 돌아온 강아지</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./상상초월-아내에게-핸드폰-공기계-빌려줬다가-뭔가를-들켜버린-남편-대참사-모먼트.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./긴급-아내에게-핸드폰-공기계-빌려줬다가-뭔가를-들켜버린-남편-대참사-이야기.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">아내에게 핸드폰 공기계 빌려줬다가 ‘뭔가’를 들켜버린 남편 대참사</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./결국-배민-리뷰-1점-받은-사장의-대처-영상.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./공감-배민-리뷰-1점-받은-사장의-대처-꿀팁.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">배민 리뷰 1점 받은 사장의 대처</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./초특급-도로-한복판에서-사진-찍는-청사포-민폐-커플-레전드-리뷰.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./초특급-도로-한복판에서-사진-찍는-청사포-민폐-커플-레전드-비밀.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">도로 한복판에서 사진 찍는 청사포 민폐 커플 레전드</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./화제의-엑소-카이가-공익-2년하고-느낀점-정리.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./필수-엑소-카이가-공익-2년하고-느낀점-총정리.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">엑소 카이가 공익 2년하고 느낀점</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./최초-3년동안-남친에게-정규직이라-거짓말한-블라인드녀-꿀팁.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./최강-3년동안-남친에게-정규직이라-거짓말한-블라인드녀-진실.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">3년동안 남친에게 정규직이라 거짓말한 블라인드녀</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./결국-160cm-키작남이-말하는-현실-노하우.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./화제의-160cm-키작남이-말하는-현실-영상.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">160cm 키작남이 말하는 현실</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./최강-비트코인으로-결혼-자금을-날린-남편과의-결혼을-고민하는-여자-현장.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./전설의-비트코인으로-결혼-자금을-날린-남편과의-결혼을-고민하는-여자-레시피.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">비트코인으로 결혼 자금을 날린 남편과의 결혼을 고민하는 여자</h2>
             </a>
         </li></ul>
